# EcoStellar

./: DEPLOY.md  DEPLOYMENT_INFO.md  LOCALHOST_DEMO.md  PROMPT5_COMPLETE_VERIFICATION.md  PROMPT8_VERIFICATION.md  README.md  STELLAR_VERIFICATION_GUIDE.md  SUBMIT_NOW.md  TESTNET_ACCOUNT_CREATION.md  index.html  package-lock.json  vercel.json
.github/workflows/: deploy.yml  pages.yml
backend/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.txt  LOCALHOST_TESTING.md  PROMPT11_DETAILED_VERIFICATION.txt  PROMPT11_STELLAR_SERVICE_COMPLETE.md  README.md  README_STELLAR_SERVICE.md  STELLAR_SERVICE_QUICK_REFERENCE.md  VERIFICATION_PROMPT11.md  database.js  package-lock.json  package.json  quick-test.sh  server.js  stellar-service.js  stellar.js  test-api-stellar.sh  test-stellar-integration.html  test-stellar-service.js  verify-prompt11.js
contracts/eco-token/: COMPLETE.md  (+7 more)
contracts/tree-nft/: COMPLETE.md  Cargo.toml  DEPLOY.md  OPENZEPPELIN_IMPLEMENTATION.md  OPENZEPPELIN_PATTERN.md  PRESENTATION.md  README.md
contracts/tree-nft/src/: lib.rs  test.rs
contracts/tree-nft/test_snapshots/test/: test_cannot_reinitialize.1.json  test_get_player_trees.1.json  test_gps_coordinates.1.json  test_initialize.1.json  test_mint_tree_nft.1.json  test_multiple_mints.1.json  test_multiple_players.1.json  test_nft_standard_functions.1.json
frontend/: MODIFICATIONS_SUMMARY.md  PROMPT5_VERIFICATION.md  PROMPT7_VERIFICATION_COMPLETE.md  README.md  VERIFICATION.md  index.html  package-lock.json  package.json  vite.config.js
game/: ASSETS.md  index.html
static-demo/: index.html
(+58 files in other folders)
